--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-uuid": "^2.0.0",
     "socket.io-client": "^4.7.1"
