--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
