--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,7 @@
     "target": "es6",
     "module": "esnext",
     "jsx": "react-jsx",
+    "noEmitOnError": false,
 
     /* Linting */
     "strict": false,
